fix gap on header, cheaper tickets!

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body:before {
   display: block;
   background-repeat: no-repeat;
   background-size: 100% auto;
-  background-position: center;
+  background-position: top center;
   width: 100vw;
   height: clamp(160px, 47vw, 344px);
   position: absolute;
